# 2048-game

./: CMakeLists.txt  README.md  run.sh
src/: condition.cpp  game.cpp  main.cpp  setup.cpp  shift.cpp  utility.cpp
src/header/: game.hpp
